# ngsd

./: .gitignore  README.md
g/: CMakeLists.txt  ISocketManager.hpp  README.md  SocketExample.cpp  SocketManager.cpp  SocketManager.hpp  clang-arm.cmake  main.cpp  main.py
g/legacy/: g_mqtt.py  test_mqtt.py
g/tests/: test_socket.cpp
s/ngsd/: pom.xml
s/ngsd/src/main/java/in/parkhyo/ngsd/: NgsdApplication.java
s/ngsd/src/main/java/in/parkhyo/ngsd/configuration/: MqttConfiguration.java  MybatisConfiguration.java
s/ngsd/src/main/java/in/parkhyo/ngsd/example/: MqttExample.java
s/ngsd/src/main/java/in/parkhyo/ngsd/mapper/: ParticleMatterMapper.java
s/ngsd/src/main/java/in/parkhyo/ngsd/model/: ParticleMatter.java
s/ngsd/src/main/java/in/parkhyo/ngsd/service/: ParticleMatterService.java
s/ngsd/src/main/resources/mybatis/mapper/: ParticleMatterMapper.xml
s/ngsd/src/test/java/in/parkhyo/ngsd/: ExampleTest.java  NgsdApplicationTests.java  ParticleMatterServiceTests.java
